--- a/MattStyle.css
+++ b/MattStyle.css
@@ -1,5 +1,5 @@
 body {
-background: url('treewater.jpg');
+background: url('images/treewater.jpg');
 background-repeat: no-repeat;
 background-attachment: fixed;
 background-position: center;
