--- a/CssStyles.css
+++ b/CssStyles.css
@@ -13,9 +13,10 @@
 		margin-top: 35px;
 	}
 	.title{
+		text-align: center;
 		margin-top: 25px;
-		margin-left: 10px;
-		margin-right: 10px;
+		margin-left: 5%;
+		margin-right: 5%;
 		margin-bottom: 10px;
 	}
 	.subtitle{
