--- a/MattStyle.css
+++ b/MattStyle.css
@@ -1,5 +1,6 @@
 body {
 background: url('images/treewater.jpg');
+background-size: 100%;
 background-repeat: no-repeat;
 background-attachment: fixed;
 background-position: center;
@@ -19,25 +20,6 @@ and I feel as though I genuinely learned more than I would have by just crapping
 	margin-left: 50px;
 	text-decoration: none;
 	background-color: rgba(0,0,0,0.3);
-}
-
-a:link{
-  color:white;
-}
-a:visited{
-  color:white;
-}
-a:hover{
-  color:white;
-}
-a:focus{
-  color:white;
-}
-a:active{
-  color:white;
-}
-a {
-	text-decoration:none
 }
 	
 
